--- a/pinger-site/package.json
+++ b/pinger-site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^7.16.2",
     "@tabler/icons-react": "^3.29.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
