--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,51 +1,63 @@
-name: 🚀 CI: Lint & Build Docker
+name: Lint & Build Docker
 
-on: [push, pull_request]]
+on: [push, pull_request]
 
 jobs:
   lint:
-    name: Lint
+    name: Проверка форматирования
     runs-on: ubuntu-latest
 
     steps:
+      - name: Клонирование репозитория
         uses: actions/checkout@v4
 
+      - name: Установка Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
+      - name: Установка зависимостей фронтенда
         run: |
           cd pinger-site
           npm install
 
+      - name: Запуск ESLint
         run: cd pinger-site && npx eslint --ext .js,.jsx,.ts,.tsx src/
 
+      - name: Запуск Prettier
         run: cd pinger-site && npx prettier --check "src/**/*.{js,jsx,ts,tsx,json,css,md}"
 
+      - name: Установка Go
         uses: actions/setup-go@v5
         with:
           go-version: 1.21
 
+      - name: Проверка GoImports
         run: |
           go install golang.org/x/tools/cmd/goimports@latest
           goimports -d ./server
 
   docker-build:
-    name: 🐳 Сборка Docker-контейнеров
+    name: Сборка Docker-контейнеров
     runs-on: ubuntu-latest
     needs: lint
 
     steps:
+      - name: Клонирование репозитория
         uses: actions/checkout@v4
 
+      - name: Создание .env для pinger-site
         run: |
           echo "VITE_API_URL=http://localhost:4000" > pinger-site/.env
 
+      - name: Установка Docker и Docker Compose
         run: |
           sudo apt update
           sudo apt install -y docker.io docker-compose
 
-        run: |
-          sudo docker compose build
+      - name: Сборка Docker-контейнеров
+        run: sudo docker compose build
 
+      - name: Проверка успешной сборки
         run: sudo docker images
+
